Add favicon to the application

--- a/Downloads/social_media_trending_app/templates/content_editor.html
+++ b/Downloads/social_media_trending_app/templates/content_editor.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Content Creator - AI Social Media Content Tool</title>
+  <link rel="icon" href="{{ url_for('static', filename='images/favicon.ico') }}" type="image/x-icon" />
 
   <!-- TinyMCE - Using the existing setup from your app -->
   <script src="{{ url_for('static', filename='tinymce/js/tinymce/tinymce.min.js') }}" referrerpolicy="origin"></script>
