--- a/Downloads/social_media_trending_app/templates/editor.html
+++ b/Downloads/social_media_trending_app/templates/editor.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Editor Home - AI Social Media Content Tool</title>
+    <link rel="icon" href="{{ url_for('static', filename='images/favicon.ico') }}" type="image/x-icon" />
     <script
       src="{{ url_for('static', filename='tinymce/js/tinymce/tinymce.min.js') }}"
       referrerpolicy="origin"
