--- a/Downloads/social_media_trending_app/templates/view_post.html
+++ b/Downloads/social_media_trending_app/templates/view_post.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8" />
     <title>View Post - AI Social Media Content Tool</title>
     <link rel="icon" href="{{ url_for('static', filename='images/favicon.ico') }}" type="image/x-icon" />
+    <link rel="icon" href="{{ url_for('static', filename='images/favicon.svg') }}" type="image/svg+xml" />
     <script
       src="{{ url_for('static', filename='tinymce/js/tinymce/tinymce.min.js') }}"
       referrerpolicy="origin"
