--- a/Downloads/social_media_trending_app/templates/saved_posts.html
+++ b/Downloads/social_media_trending_app/templates/saved_posts.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">  <head>
+<html lang="en">
+  <head>
     <meta charset="utf-8" />
     <title>Saved Posts - AI Social Media Content Tool</title>
-    <link rel="icon" href="{{ url_for('static', filename='images/favicon.ico') }}" type="image/x-icon" />
-    <link rel="icon" href="{{ url_for('static', filename='images/favicon.svg') }}" type="image/svg+xml" />
+    <link
+      rel="icon"
+      href="{{ url_for('static', filename='images/favicon.ico') }}"
+      type="image/x-icon"
+    />
+    <link
+      rel="icon"
+      href="{{ url_for('static', filename='images/favicon.svg') }}"
+      type="image/svg+xml"
+    />
     <style>
       body {
         font-family: Arial, sans-serif;
