--- a/Downloads/social_media_trending_app/templates/editor.html
+++ b/Downloads/social_media_trending_app/templates/editor.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Editor Home - AI Social Media Content Tool</title>
+    <title>Editor Home - AI Social Media Content</title>
     <link
       rel="icon"
       href="{{ url_for('static', filename='images/favicon.ico') }}"
@@ -138,7 +138,7 @@
   </head>
   <body>
     <div class="nav-menu">
-      <h1>AI Social Media Content Tool</h1>
+      <h1>AI Social Media Content</h1>
       <div class="nav-links">
         <a href="/">Editor Home</a>
         <a href="/create_content">Social Media Creator</a>
